# 3PTicTacToeAI

./: .gitignore  CMakeLists.txt  README.md  colors.h  doctest.h  kareemstodo.txt  minimax_Test.cpp  pieces.h  tictactoe3.cpp  tictactoe3.h  tictactoe3_Test.cpp
